# movement-to-maptos

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clap-markdown-list  flake.nix
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: build-push-container.yml  build-push-containers-all.yml  build-push-manifest.yml  nix-command.yml  tests.yml
checks/: README.md
checks/e2e/citeria/account-equals/: Cargo.toml
checks/e2e/citeria/accounts-equal/: Cargo.toml  README.md
checks/e2e/citeria/balances-equal/: Cargo.toml  README.md
checks/e2e/citeria/balances-equal/src/: lib.rs
checks/e2e/citeria/core-resource-failure/: Cargo.toml  README.md
checks/e2e/citeria/core-resource-failure/src/: lib.rs
checks/e2e/citeria/core-resource-failure/src/include/bridge-scripts/: enable_bridge_feature.move  store_mint_burn_caps.move  update_bridge_relayer.move
checks/e2e/citeria/empty/: Cargo.toml  README.md
checks/e2e/citeria/governance/: Cargo.toml  README.md
checks/e2e/citeria/governance/src/: does_not_make_sense.rs  lib.rs
checks/e2e/citeria/matching-feature-flags/: Cargo.toml  README.md
checks/e2e/citeria/matching-feature-flags/src/: lib.rs
checks/e2e/citeria/non-initializable/: Cargo.toml  README.md
checks/e2e/citeria/transacting/: Cargo.toml  README.md
checks/e2e/citeria/transacting/src/: lib.rs
checks/e2e/util/types/: Cargo.toml
checks/executor/checks/movement-mainnet/: Cargo.toml
checks/executor/checks/movement-mainnet/src/: global_storage_includes.rs  lib.rs
checks/executor/checks/sketchpad/: Cargo.toml  README.md
checks/executor/citeria/: README.md
checks/executor/citeria/empty/: Cargo.toml
checks/executor/citeria/global-storage-equal/: Cargo.toml  README.md
checks/executor/citeria/global-storage-includes/: Cargo.toml  README.md
checks/executor/citeria/global-storage-injective/: Cargo.toml  README.md
checks/executor/citeria/global-storage-injective/src/: lib.rs
checks/executor/citeria/global-storage-not-empty/: Cargo.toml  README.md
checks/executor/cli/util/: Cargo.toml
checks/executor/preludes/: Cargo.toml
checks/executor/preludes/src/: basic.rs
checks/executor/util/types/: Cargo.toml
docs/cli/: README.md
migration/cli/: README.md
migration/cli/check/: Cargo.toml
migration/cli/check-dev/: Cargo.toml
migration/cli/check-dev/docs/cli/: README.md
migration/cli/check-dev/src/: cli.rs  main.rs
migration/cli/check-dev/src/cli/: all.rs  all_of.rs  global_storage_injective.rs  global_storage_not_empty.rs
migration/cli/check/src/: cli.rs  main.rs
migration/cli/migrate/: Cargo.toml
migration/cli/migrate-chain/: Cargo.toml
migration/cli/migrate-chain-dev/: Cargo.toml
migration/cli/migrate-chain-dev/src/: cli.rs  main.rs
migration/cli/migrate-chain/src/: cli.rs  main.rs
migration/cli/migrate-dev/: Cargo.toml
migration/cli/migrate-dev/src/: cli.rs  main.rs
migration/cli/migrate-node/: Cargo.toml
migration/cli/migrate-node-dev/: Cargo.toml
migration/cli/migrate-node-dev/src/: cli.rs  main.rs
migration/cli/migrate-node/src/: cli.rs  main.rs
migration/cli/migrate/src/: cli.rs  main.rs
migration/cli/movement-to-maptos/: Cargo.toml
migration/cli/movement-to-maptos/src/: main.rs
migration/cli/movement-to-movement-aptos/: Cargo.toml
migration/cli/movement-to-movement-aptos/src/: main.rs
migration/cli/mtma/: Cargo.toml
migration/cli/mtma-dev/: Cargo.toml
migration/cli/mtma-dev/src/: cli.rs  main.rs
migration/cli/mtma/src/: cli.rs  main.rs
migration/cli/track/: Cargo.toml
migration/cli/track-dev/: Cargo.toml
migration/cli/track-dev/src/: cli.rs  main.rs
migration/cli/track/src/: cli.rs  main.rs
migration/core/movement-to-maptos/: Cargo.toml
migration/core/movement-to-movement-aptos/: Cargo.toml
migration/core/mtm-replay/: Cargo.toml
migration/core/mtma/: Cargo.toml
migration/core/mtma-indexer-db-statekeys-enabled/: Cargo.toml
migration/core/mtma-migrate-chain/: Cargo.toml
migration/core/mtma-migrate-chain/src/: migrate.rs
migration/core/mtma-null/: Cargo.toml  README.md
migration/core/mtma-null/src/migrate/: config.rs  migrate.rs
migration/core/mtma-null/src/migrate/config/: mod.rs
migration/core/mtma-null/src/migrate/migrate/: mod.rs
migration/core/mtma-replay/: Cargo.toml  README.md
migration/core/mtma/src/: framework.rs  lib.rs
migration/core/mtma/src/framework/: config.rs  framework.rs
migration/core/mtma/src/migrate/: config.rs  mod.rs
migration/util/executor-types/: Cargo.toml
migration/util/executor-types/src/: lib.rs  migration.rs
tests/: README.md
tests/e2e/util/types/: Cargo.toml
tests/e2e/util/types/src/criterion/: mod.rs
tests/executor/citeria/: README.md
tests/executor/citeria/global-storage-bijective/: Cargo.toml  README.md
tests/executor/citeria/global-storage-equal/: Cargo.toml
tests/executor/util/types/: Cargo.toml
tests/executor/util/types/src/criterion/: maptos_executor.rs  mod.rs  movement_aptos_executor.rs  movement_executor.rs
tests/executor/util/types/src/criterion/movement_aptos_executor/: mod.rs
util/bcs-ext/: Cargo.toml  README.md
util/bcs-ext/src/: comparison.rs  conversion.rs  lib.rs
util/include-dir/: Cargo.toml
util/include-dir/src/: buildtime.rs  runtime.rs
util/include-dir/src/runtime/: mod.rs
util/include-vendor/: Cargo.toml
util/include-vendor/src/: buildtime.rs  lib.rs  runtime.rs
util/movement-embedded-runner/: Cargo.toml
util/movement-embedded-runner/src/: lib.rs
util/movement-syncing/: Cargo.toml  README.md
util/movement-syncing/src/: db.rs
util/movement/movement/: Cargo.toml
util/movement/movement-core/: Cargo.toml  README.md  build.rs
util/movement/movement-core/src/: config.rs  lib.rs  movement.rs
util/movement/movement-core/src/movement/: faucet.rs  rest_api.rs
util/movement/movement-syncing/: Cargo.toml
util/movement/movement-syncing/src/: db.rs
util/movement/movement-util/: Cargo.toml
util/movement/movement/docs/cli/: README.md
util/movement/movement/src/: cli.rs  lib.rs  main.rs
util/movement/movement/src/cli/: run.rs
(+83 files in other folders)
