[workspace]

resolver = "2"

members = [

]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Movement Labs"]
repository = "www.github.com/movementlabsxyz/ffs"
homepage = "www.github.com/movementlabsxyz/ffs"
publish = false
rust-version = "1.81.0"

[workspace.dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy.git", package = "alloy", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5", features = [
  "node-bindings",
  "rpc-types-trace",
  "json-rpc",
  "json-abi",
  "rpc-client",
  "signers",
  "signer-yubihsm",
  "pubsub",
  "providers",
] }
alloy-rpc-types-eth = "0.12"
alloy-eips = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-primitives = { version = "0.8.22", default-features = false }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5", features = [
  "ws",
] }
alloy-rlp = "0.3.9"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-sol-types = { version = "0.8.22", features = ["json"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5", features = ["reqwest-rustls-tls"] }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
anyhow = "1.0"
async-stream = "0.3.0"
async-trait = "0.1.71"
clap = { version = "4.4.10", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.17"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.5"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-stream = "0.1.15"
hex = { version = "0.4.3", default-features = false, features = [
  "alloc",
  "serde",
] }
zip = { version = "2.4.2", features = ["flate2"] }
walkdir = "2.3.2"
tempfile = "3.5.0"
itertools = "0.14.0"
regex = "1.9.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.32"
proc-macro-error = { version = "1.0.4", features = ["syn-error"] }
strip-ansi-escapes = "0.2.1"
cargo_metadata = "0.19.2"
ignore = "0.4.20"
convert_case = "0.8.0"
toml = "0.8.20"
tonic = "0.12.3"
tonic-build = { version = "0.12.3", features = ["prost"] }
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
prost = "0.13.3"
libp2p = { version = "0.55.0", features = ["tcp", "quic"] }


helios = { git = "https://github.com/movementlabsxyz/helios.git", rev = "7a5fc8af548e8e93863d942f333008e4da5f937c"}

# movement
maptos-opt-executor = { git = "https://github.com/movementlabsxyz/movement.git", rev = "18e6297fbe106a2f7f944d5b5fad2dd6d9f1ea51" }

# maptos-core
aptos-block-executor= { git = "https://github.com/movementlabsxyz/maptos-core.git", rev = "74f9c0ec648b7e8a64e990e0f4c20fcfb5ab141b" }

# model checking and verification


# secure-signing
secure-signer = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "f37eebd6d494d21b26b2faa44e1188de42ff1007" }
secure-signer-loader = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "f37eebd6d494d21b26b2faa44e1188de42ff1007"  }
secure-signer-aws-kms = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "f37eebd6d494d21b26b2faa44e1188de42ff1007"  }

# kestrel 
kestrel = { git = "https://github.com/movementlabsxyz/kestrel.git", rev = "85e2f681ae3e54b29bb18d4ed7ca750116173321" }
jsonlvar = { git = "https://github.com/movementlabsxyz/kestrel.git", rev = "85e2f681ae3e54b29bb18d4ed7ca750116173321" }
commander = { git = "https://github.com/movementlabsxyz/kestrel.git", rev = "85e2f681ae3e54b29bb18d4ed7ca750116173321" }

# orfile
orfile = { git = "https://github.com/movementlabsxyz/orfile.git", rev = "d02299214e5aa202130cd1eb9593ce8064d1ec69" }
orfile-util = { git = "https://github.com/movementlabsxyz/orfile.git", rev = "d02299214e5aa202130cd1eb9593ce8064d1ec69" }
orfile-macro = { git = "https://github.com/movementlabsxyz/orfile.git", rev = "d02299214e5aa202130cd1eb9593ce8064d1ec69" }

# adud
lifecycle = { git = "https://github.com/movementlabsxyz/adud.git", rev = "440cc81ecd69ba570a8bbdbaf3035e9d53fe6e84" }
lifecycle-util = { git = "https://github.com/movementlabsxyz/adud.git", rev = "440cc81ecd69ba570a8bbdbaf3035e9d53fe6e84" }
lifecycle-macro = { git = "https://github.com/movementlabsxyz/adud.git", rev = "440cc81ecd69ba570a8bbdbaf3035e9d53fe6e84" }
service-util = { git = "https://github.com/movementlabsxyz/adud.git", rev = "440cc81ecd69ba570a8bbdbaf3035e9d53fe6e84" }
service-macro = { git = "https://github.com/movementlabsxyz/adud.git", rev = "440cc81ecd69ba570a8bbdbaf3035e9d53fe6e84" }
service-lifecycle = { git = "https://github.com/movementlabsxyz/adud.git", rev = "440cc81ecd69ba570a8bbdbaf3035e9d53fe6e84" }

# docs
clap-markdown-ext = { git = "https://github.com/movementlabsxyz/clap-markdown-ext.git", rev = "8f54fe424504bf37fb01dc69aaed8166e429fe6a"}


[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"

[profile.dev]
panic = "unwind"

[profile.release.build-override]
opt-level = 3