[workspace]

resolver = "2"

members = [

    # migration
    "migration/cli/*",
    "migration/core/*",
    "migration/util/*",
    # executor
    "checks/executor/util/*",
    "checks/executor/citeria/*",
    "checks/executor/checks/*",
    "checks/executor/preludes",
    # e2e
    "checks/e2e/util/*",
    "checks/e2e/citeria/*",
    # util
    "util/include-dir",
    "util/include-vendor",
    "util/movement/*",

]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Movement Labs"]
repository = "www.github.com/movementlabsxyz/ffs"
homepage = "www.github.com/movementlabsxyz/ffs"
publish = false
rust-version = "1.81.0"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3.0"
async-trait = "0.1.71"
clap = { version = "4.4.10", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.17"
serde = "1.0"
serde_json = "1.0.140"
serde_derive = "1.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.5"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-stream = "0.1.15"
hex = { version = "0.4.3", default-features = false, features = [
    "alloc",
    "serde",
] }
zip = { version = "2.4.2", features = ["flate2"] }
walkdir = "2.3.2"
tempfile = "3.5.0"
itertools = "0.14.0"
regex = "1.9.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.32"
proc-macro-error = { version = "1.0.4", features = ["syn-error"] }
strip-ansi-escapes = "0.2.1"
cargo_metadata = "0.19.2"
ignore = "0.4.20"
convert_case = "0.8.0"
toml = "0.8.20"
tonic = "0.12.3"
tonic-build = { version = "0.12.3", features = ["prost"] }
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
prost = "0.13.3"
libp2p = { version = "0.55.0", features = ["tcp", "quic"] }
chrono = "0.4.31"
rand = "0.7.3"
uuid = "1.10.0"

poem = { version = "=3.1.3", features = ["anyhow", "compression", "rustls"] }
poem-openapi = { version = "=5.1.2", features = ["swagger-ui", "url"] }
poem-openapi-derive = "=5.1.1"
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
jemalloc-sys = "0.5.4"

either = "1.8.1"
tempdir = "0.3.7"
sysinfo = "0.34.2"

# movement
maptos-opt-executor = { git = "https://github.com/movementlabsxyz/movement.git", rev = "aa1ffed1a113441a65662792d15682ad52406108" }
movement-client = { git = "https://github.com/movementlabsxyz/movement.git", rev = "aa1ffed1a113441a65662792d15682ad52406108" }
syncador =  { git = "https://github.com/movementlabsxyz/movement.git", rev = "aa1ffed1a113441a65662792d15682ad52406108" }
movement-types = { git = "https://github.com/movementlabsxyz/movement.git", rev = "aa1ffed1a113441a65662792d15682ad52406108" }
maptos-execution-util = { git = "https://github.com/movementlabsxyz/movement.git", rev = "aa1ffed1a113441a65662792d15682ad52406108" }

# aptos-core
aptos-executor = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
aptos-vm = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
aptos-rest-client = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
aptos-storage-interface = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
aptos-types = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
aptos-db = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
aptos_schemadb = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
aptos-config = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
aptos-db-indexer = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "2941ee2b5876ab93cfb8010154c9466d7d593ed9" }
# model checking and verification


# secure-signing
secure-signer = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "f37eebd6d494d21b26b2faa44e1188de42ff1007" }
secure-signer-loader = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "f37eebd6d494d21b26b2faa44e1188de42ff1007" }
secure-signer-aws-kms = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "f37eebd6d494d21b26b2faa44e1188de42ff1007" }

# kestrel 
kestrel = { git = "https://github.com/movementlabsxyz/kestrel.git", rev = "85e2f681ae3e54b29bb18d4ed7ca750116173321" }
jsonlvar = { git = "https://github.com/movementlabsxyz/kestrel.git", rev = "85e2f681ae3e54b29bb18d4ed7ca750116173321" }
commander = { git = "https://github.com/movementlabsxyz/kestrel.git", rev = "85e2f681ae3e54b29bb18d4ed7ca750116173321" }

# orfile
orfile = { git = "https://github.com/movementlabsxyz/orfile.git", rev = "b49cb42495816fa00a1107be5bbf41aff3a8255d" }

# docs
clap-markdown-ext = { git = "https://github.com/movementlabsxyz/clap-markdown-ext.git", rev = "8f54fe424504bf37fb01dc69aaed8166e429fe6a" }

# internal
## migration
### cli
mtma = { path = "migration/cli/mtma" }
mtma-dev = { path = "migration/cli/mtma-dev" }
mtma-check = { path = "migration/cli/check" }
mtma-check-dev = { path = "migration/cli/check-dev" }
mtma-migrate = { path = "migration/cli/migrate" }
mtma-migrate-dev = { path = "migration/cli/migrate-dev" }
mtma-migrate-chain = { path = "migration/cli/migrate-chain" }
mtma-migrate-chain-dev = { path = "migration/cli/migrate-chain-dev" }
mtma-migrate-node = { path = "migration/cli/migrate-node" }
mtma-migrate-node-dev = { path = "migration/cli/migrate-node-dev" }
mtma-track = { path = "migration/cli/track" }
mtma-track-dev = { path = "migration/cli/track-dev" }

### core
mtma-core = { path = "migration/core/mtma" }
mtma-null-core = { path = "migration/core/mtma-null" }
mtma-migrate-chain-core = { path = "migration/core/mtma-migrate-chain" }

### preludes
migration-executor-preludes = { path = "checks/executor/preludes" }

### util
migration-executor-types = { path = "migration/util/executor-types" }

## checks
### executor
migration-executor-test-types = { path = "checks/executor/util/types" }
migration-executor-test-global-storage-injective-criterion = { path = "checks/executor/citeria/global-storage-injective" }
migration-executor-test-global-storage-includes-criterion = { path = "checks/executor/citeria/global-storage-includes" }
migration-executor-test-global-storage-not-empty-criterion = { path = "checks/executor/citeria/global-storage-not-empty" }


### e2e
migration-e2e-test-types = { path = "checks/e2e/util/types" }

## util
include-dir = { path = "util/include-dir" }
include-vendor = { path = "util/include-vendor" }
movement-syncing = { path = "util/movement/movement-syncing" }
movement-core = { path = "util/movement/movement-core" }

[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"

[profile.dev]
panic = "unwind"

[profile.release.build-override]
opt-level = 3

[profile.release]
debug = true
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1

[profile.ci]
inherits = "release"
debug = "line-tables-only"
overflow-checks = true
debug-assertions = true

[profile.bench]
debug = true

[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
futures = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-channel = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-executor = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-core = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-util = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-sink = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-io = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-task = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }