[package]
name = "bcs-ext"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
bcs = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
