[package]
name = "include-dir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
zip = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
commander = { workspace = true }
thiserror = { workspace = true }
convert_case = { workspace = true }

[lints]
workspace = true
