[package]
name = "include-vendor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
include-dir = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
cargo_metadata = { workspace = true }

[lints]
workspace = true
