[package]
name = "movement-embedded-runner"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
