[package]
name = "mtma-null-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
anyhow = { workspace = true }
clap-markdown-ext = { workspace = true }
thiserror = { workspace = true }
orfile = { workspace = true }
migration-executor-types = { workspace = true }
aptos-db = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-config = { workspace = true }
aptos-executor = { workspace = true }
aptos-vm = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
[lints]
workspace = true
