[package]
name = "movement-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
syncador = { workspace = true }
movement-types = { workspace = true }
tempdir = { workspace = true }
uuid = { workspace = true }
include-vendor = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
kestrel = { workspace = true }

[build-dependencies]
include-vendor = { workspace = true }

[lints]
workspace = true
