[package]
name = "movement"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
syncador = { workspace = true }
movement-types = { workspace = true }
tempdir = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
