[package]
name = "migration-e2e-test-core-resource-failure-criterion"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
migration-e2e-test-types = { workspace = true }
aptos-types = { workspace = true }
aptos-sdk = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
