[package]
name = "migration-e2e-test-matching-feature-flags-criterion"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
migration-e2e-test-types = { workspace = true }


[lints]
workspace = true
