[package]
name = "migration-executor-checks-mainnet"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
migration-executor-test-types = { workspace = true }
anyhow = { workspace = true }
mtma-null-core = { workspace = true }
migration-executor-test-global-storage-injective-criterion = { workspace = true }
migration-executor-test-global-storage-includes-criterion = { workspace = true }
migration-executor-test-global-storage-not-empty-criterion = { workspace = true }
migration-executor-preludes = { workspace = true }
movement-syncing = { workspace = true }
maptos-execution-util = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
