[package]
name = "migration-executor-test-global-storage-injective-criterion"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
migration-executor-test-types = { workspace = true }
anyhow = { workspace = true }


[lints]
workspace = true
