[package]
name = "migration-e2e-test-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
movement-client = { workspace = true }
aptos-rest-client = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
